2463 [AVS Script Creator] improved anamorphic calculation. if the output DAR is the same as the input DAR 
     +[OneClick]             it will not be rounded within in the "acceptable anamorhphic aspect error" tolerance
2462 [Update]             improved status handling
     [Update]             cosmetics
2461 [L-SMASH Indexer]    renamed to L-SMASH Works
     [L-SMASH Indexer]    internal optimizations
2460 [Update]             if external tools are disabled in the settings they are also disabled for updates
2459 [Audio Encoder]      added AddAutoloadDir() if using the included AviSynth+
2458 [OneClick]           fixed problem if using the same internal audio track several times
2457 [Audio Encoder]      fixed missing SSRC() function in included AviSynth+
     [Audio Encoder]      improved error handling
2456 [Log]                improved .NET detection
2455 [Update]             cosmetics
2454 [Log]                show information about .NET 2.0 and 4.0
     [Log]                removed information about highest .NET build
2453 [Audio Encoder]      fixed sometimes choosing the wrong decoder (regression of 2448)
2452 [Audio Encoder]      lowered also the priority for the LWLibavAudioSource decoder
     [Audio Encoder]      default order: NicAudio, BassAudio, FFAudioSource, LWLibavAudioSource, DirectShow
2451 [Chapter Creator]    added support for mkv input files
     [Chapter Creator]    added option to specify the minimum title length
     [Chapter Creator]    added option to specify the FPS value
     [Chapter Creator]    improved FPS detection for DVD/Bluray
2450 [L-SMASH Indexer]    show time/file progress during indexing
     [L-SMASH Indexer]    added possibility to set output file/folder
     [L-SMASH Indexer]    blocked indexer if input file is in a read only directory
     [L-SMASH Indexer]    lowered the default priority so that it will be used after FFMS
     [L-SMASH Indexer]    added log information